<resources>
    <string name="app_name">Karori</string>
    <string name="Menu_button">Menù</string>
    <string name="Carboidrati">Carboidrati</string>
    <string name="Proteine">Proteine</string>
    <string name="Grassi">Grassi</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="repeat_password">Confirm Password</string>
    <string name="welcome">"Welcome"</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="remember_me">Remember me</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="login">Login</string>
    <string name="dont_have_an_account">Don\'t have an account?</string>
    <string name="sign_up">Sign up</string>
    <string name="name">Name</string>
    <string name="surname">Surname</string>
    <string name="Male">Male</string>
    <string name="female">Female</string>
    <string name="gender">Gender</string>
    <string name="logo">Logo</string>
    <string name="info_password"></string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">Login failed</string>
    <string name="resetPsw">Insert email to reset your password</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="google_login">Login with Google</string>
    <string name="Or">Or</string>
    <string name="new_karori">New to Karori?</string>
    <string name="api_key">488603165db24878b91ef98a50ac02d0</string>
    <string name="Web_id_client">821771622083-4v2f4g48me1jqqkdllhk9bpkfbsj7pib.apps.googleusercontent.com</string>
    <string name="error_login_password_message">The password is invalid</string>
    <string name="error_login_user_message">here is no user record corresponding to this identifier</string>
    <string name="unexpected_error">Unexpected error</string>
    <string name="error_no_google_account_found_message">No Google accounts have been found</string>
    <string name="error_password">Password must have at least 6 character</string>
    <string name="error_user_collision_message">The mail address is already in use</string>
    <string name="check_login_data_message">check the data you have insert</string>
    <string name="logout">logged out</string>
    <string name="Zero">0</string>
    <string name="Weight">Weight: </string>
    <string name="Height">Height: </string>
    <string name="Weightgoal">Weight goal: </string>
    <string name="Age">Age: </string>
    <string name="Carbohhydrates">Carbohhydrates: </string>
    <string name="CARBOHYDRATES">CARBOHYDRATES: </string>
    <string name="Fat">Fat: </string>
    <string name="FAT">FAT: </string>
    <string name="Proteins">Proteins: </string>
    <string name="PROTEINS">PROTEINS: </string>
    <string name="Calories">Calories: </string>
    <string name="CALORIES">CALORIES: </string>
    <string name="CaloriesNeeds">Calories Needs: </string>
    <string name="Calendar">Calendar</string>
    <string name="DataSelected">Data Selected: </string>
    <string name="Email">Email: </string>
    <string name="ChangeYourPassword">Change Your Password</string>
    <string name="EnableModifyView">Enable Modify View</string>
    <string name="LogOut">Log Out</string>
    <string name="Seemore">See more</string>
    <string name="Add">Add</string>
    <string name="Breakfast">Breakfast</string>
    <string name="Lunch">Lunch</string>
    <string name="Dinner">Dinner</string>
    <string name="Quantity">Quantity: </string>


    <!-->altra key 46a966c9b4dc4c8f98176d0f9c11a71e <-->
    <!-->altra key 8b70cdb4ff6d42f4ae4efece4a891a0d <-->
    <!-->altra key 1326e32a25274e658d4c68f4bbcc6f2f <-->
    <!-->altra key 488603165db24878b91ef98a50ac02d0 <-->

</resources>