<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/login3"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:background="@drawable/background_transparent"
        android:backgroundTint="@android:color/transparent"
        android:outlineProvider="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:outlineProvider="none">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:text="@string/DataSelected"
                android:textColor="@color/white"
                android:textSize="15sp"
                app:cardBackgroundColor="#B4FFFFFF" />

            <TextView
                android:id="@+id/show_selected_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_weight="1"
                android:outlineProvider="none"
                android:textColor="@color/white" />
        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginStart="20dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="20dp"
        android:background="@color/white"
        android:outlineProvider="none"
        app:cardBackgroundColor="#B4FFFFFF"
        app:cardCornerRadius="40dp">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center|top"
            android:orientation="vertical"
            android:textColor="@color/white">


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:text="USER INFO"
                android:textColor="@color/black" />

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="15dp"
                android:layout_weight="1"
                android:outlineProvider="none"
                app:cardBackgroundColor="#34202020"
                app:cardCornerRadius="20dp"
                app:layout_constraintTop_toBottomOf="@+id/cardViewAltezza">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical"
                        android:padding="10dp"
                        android:text="@string/Weight"
                        android:textColor="#49454F" />

                    <TextView
                        android:id="@+id/pesoCalendar"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_marginEnd="10dp"
                        android:layout_weight="1"
                        android:gravity="center_vertical|end"
                        android:text="@string/Zero" />
                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="15dp"
                android:layout_weight="1"
                android:outlineProvider="none"
                app:cardBackgroundColor="#34202020"
                app:cardCornerRadius="20dp"
                app:layout_constraintTop_toBottomOf="@+id/cardViewAltezza">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical"
                        android:padding="10dp"
                        android:text="@string/Height"
                        android:textColor="#49454F" />

                    <TextView
                        android:id="@+id/altezzaCalendar"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_marginEnd="10dp"
                        android:gravity="center_vertical|end"
                        android:layout_weight="1"
                        android:text="@string/Zero" />
                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="15dp"
                android:layout_weight="1"
                android:outlineProvider="none"
                app:cardBackgroundColor="#34202020"
                app:cardCornerRadius="20dp"
                app:layout_constraintTop_toBottomOf="@+id/cardViewAltezza">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical"
                        android:padding="10dp"
                        android:text="@string/Weightgoal"
                        android:textColor="#49454F" />

                    <TextView
                        android:id="@+id/pesoGoalCalendar"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_marginEnd="10dp"
                        android:gravity="center_vertical|end"
                        android:layout_weight="1"
                        android:text="@string/Zero" />
                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="15dp"
                android:layout_marginBottom="10dp"
                android:layout_weight="1"
                android:outlineProvider="none"
                app:cardBackgroundColor="#34202020"
                app:cardCornerRadius="20dp"
                app:layout_constraintTop_toBottomOf="@+id/cardViewAltezza">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical"
                        android:padding="10dp"
                        android:text="@string/Age"
                        android:textColor="#49454F" />

                    <TextView
                        android:id="@+id/ageCalendar"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_marginEnd="10dp"
                        android:gravity="center_vertical|end"
                        android:layout_weight="1"
                        android:text="@string/Zero" />
                </LinearLayout>

            </androidx.cardview.widget.CardView>

        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginStart="20dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="20dp"
        android:background="@color/white"
        android:outlineProvider="none"
        app:cardBackgroundColor="#B4FFFFFF"
        app:cardCornerRadius="40dp">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center|top"
            android:orientation="vertical"
            android:textColor="@color/white">


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:text="FOOD INFO"
                android:textColor="@color/black" />

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="15dp"
                android:layout_weight="1"
                android:outlineProvider="none"
                app:cardBackgroundColor="#34202020"
                app:cardCornerRadius="20dp"
                app:layout_constraintTop_toBottomOf="@+id/cardViewAltezza">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical"
                        android:padding="10dp"
                        android:text="@string/Carbohhydrates"
                        android:textColor="#49454F" />

                    <TextView
                        android:id="@+id/carbohhydratesCalendar"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_marginEnd="10dp"
                        android:gravity="center_vertical|end"
                        android:layout_weight="1"
                        android:text="@string/Zero" />
                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="15dp"
                android:layout_weight="1"
                android:outlineProvider="none"
                app:cardBackgroundColor="#34202020"
                app:cardCornerRadius="20dp"
                app:layout_constraintTop_toBottomOf="@+id/cardViewAltezza">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical"
                        android:padding="10dp"
                        android:text="@string/Fat"
                        android:textColor="#49454F" />

                    <TextView
                        android:id="@+id/fatCalendar"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_marginEnd="10dp"
                        android:gravity="center_vertical|end"
                        android:layout_weight="1"
                        android:text="@string/Zero" />
                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="15dp"
                android:layout_weight="1"
                android:outlineProvider="none"
                app:cardBackgroundColor="#34202020"
                app:cardCornerRadius="20dp"
                app:layout_constraintTop_toBottomOf="@+id/cardViewAltezza">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical"
                        android:padding="10dp"
                        android:text="@string/Proteins"
                        android:textColor="#49454F" />

                    <TextView
                        android:id="@+id/proteineCalendar"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_marginEnd="10dp"
                        android:gravity="center_vertical|end"
                        android:layout_weight="1"
                        android:text="@string/Zero" />
                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="15dp"
                android:layout_weight="1"
                android:outlineProvider="none"
                app:cardBackgroundColor="#34202020"
                app:cardCornerRadius="20dp"
                app:layout_constraintTop_toBottomOf="@+id/cardViewAltezza">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical"
                        android:padding="10dp"
                        android:text="@string/Calories"
                        android:textColor="#49454F" />

                    <TextView
                        android:id="@+id/calorieCalendar"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_marginEnd="10dp"
                        android:gravity="center_vertical|end"
                        android:layout_weight="1"
                        android:text="@string/Zero" />
                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="15dp"
                android:layout_marginBottom="10dp"
                android:layout_weight="1"
                android:outlineProvider="none"
                app:cardBackgroundColor="#34202020"
                app:cardCornerRadius="20dp"
                app:layout_constraintTop_toBottomOf="@+id/cardViewAltezza">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical"
                        android:padding="10dp"
                        android:text="@string/CaloriesNeeds"
                        android:textColor="#49454F" />

                    <TextView
                        android:id="@+id/calorieNeedsCalendar"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="10dp"
                        android:gravity="center_vertical|end"
                        android:layout_marginLeft="10dp"
                        android:layout_weight="1"
                        android:text="@string/Zero" />
                </LinearLayout>

            </androidx.cardview.widget.CardView>

        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/calendar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_marginTop="20dp"
        android:text="@string/Calendar" />
</LinearLayout>