<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login3"
    tools:context=".Login.LoginFragment">

    <ImageView
        android:id="@+id/Logo_SignIn"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:src="@drawable/logokarori"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardViewSignIn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintHorizontal_bias="0.529"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        app:cardPreventCornerOverlap="false"
        android:outlineProvider="none"
        app:cardBackgroundColor="#97FFFFFF"
        app:cardCornerRadius="40dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Logo_SignIn"
        android:foregroundGravity="center">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:outlineProvider="none"
            app:cardBackgroundColor="@android:color/transparent">

            <LinearLayout
                android:id="@+id/linearLayoutSignIn"
                android:layout_width="match_parent"
                android:layout_height="600dp"
                android:layout_gravity="center"
                android:orientation="vertical"
                android:layout_marginRight="20dp"
                android:layout_marginLeft="5dp"
                >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:fontFamily="cursive"
                    android:text="@string/welcome"
                    android:textColor="#364450"
                    android:textSize="45sp"
                    android:textStyle="bold" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/Username_TextInput_SignIn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:outlineProvider="none"
                    app:boxBackgroundColor="#D5D5D5"
                    app:boxCornerRadiusBottomEnd="20dp"
                    app:boxCornerRadiusBottomStart="20dp"
                    app:boxCornerRadiusTopEnd="20dp"
                    app:boxCornerRadiusTopStart="20dp"
                    app:startIconDrawable="@drawable/ic_baseline_alternate_email_24">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/usernameEditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:hint="@string/username"
                        android:inputType="textEmailAddress"
                        app:endIconMode="clear_text"
                        tools:ignore="TextContrastCheck" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/Psw_textInput_SingIn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:isScrollContainer="true"
                    app:boxCornerRadiusBottomEnd="20dp"
                    app:boxCornerRadiusBottomStart="20dp"
                    app:boxCornerRadiusTopEnd="20dp"
                    app:boxCornerRadiusTopStart="20dp"
                    app:startIconCheckable="true"
                    app:startIconDrawable="@drawable/ic_baseline_lock_24">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/PswEditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/password"
                        android:inputType="textPassword"
                        android:isScrollContainer="true"
                        tools:ignore="TextContrastCheck" />
                </com.google.android.material.textfield.TextInputLayout>

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:outlineProvider="none"
                    app:cardBackgroundColor="#00FFFFFF">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:backgroundTint="@android:color/transparent"
                        android:orientation="horizontal"
                        android:layout_gravity="end">

                        <Button
                            android:id="@+id/buttonForgotPsw"
                            style="@style/Widget.AppCompat.Button.Borderless"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="end"
                            android:layout_weight="1"
                            android:text="@string/forgot_password"
                            android:textAllCaps="false"
                            android:textColor="#065FD6"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                    </androidx.constraintlayout.widget.ConstraintLayout>
                </androidx.cardview.widget.CardView>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/buttonLogin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="@string/login"
                    tools:ignore="MissingClass" />

                <RelativeLayout
                    android:id="@+id/relative_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginTop="20dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/buttonLogin">

                    <View
                        android:layout_width="wrap_content"
                        android:layout_height="1dp"
                        android:layout_centerVertical="true"
                        android:layout_marginStart="24dp"
                        android:layout_toStartOf="@id/textview_or"
                        android:background="@color/black" />

                    <TextView
                        android:id="@+id/textview_or"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:text="or" />

                    <View
                        android:layout_width="wrap_content"
                        android:layout_height="1dp"
                        android:layout_centerVertical="true"
                        android:layout_marginEnd="24dp"
                        android:layout_toEndOf="@id/textview_or"
                        android:background="@color/black" />

                </RelativeLayout>

                <Button
                    android:id="@+id/button_google_login"
                    style="@style/Widget.Material3.Button.ElevatedButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="12dp"
                    android:layout_marginEnd="24dp"
                    android:text="@string/google_login"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                    android:textColor="@color/google_login_text"
                    android:textSize="14sp"
                    app:backgroundTint="@color/google_login_button"
                    app:icon="@drawable/googleg_standard_color_18"
                    app:iconGravity="textStart"
                    app:iconTint="@null" />

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/linearLayout2"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="bottom">

                    <TextView
                        android:id="@+id/textView2"
                        android:layout_width="0dp"
                        android:layout_height="33dp"
                        android:layout_marginEnd="1dp"
                        android:layout_marginBottom="12dp"
                        android:text="@string/new_karori"
                        android:textSize="19sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toStartOf="@+id/sign_up_button"
                        app:layout_constraintHorizontal_chainStyle="packed"
                        app:layout_constraintStart_toStartOf="parent"
                        android:gravity="center"/>

                    <Button
                        android:id="@+id/sign_up_button"
                        android:layout_width="162dp"
                        android:layout_height="50dp"
                        android:text="Register Now"
                        android:textAllCaps="false"
                        app:layout_constraintBaseline_toBaselineOf="@+id/textView2"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/textView2" />


                    <Button
                        android:id="@+id/provaSummaryActivity"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="end"
                        android:layout_weight="1"
                        android:text="provaSummaryActivity"
                        android:textAllCaps="false"
                        android:textColor="#065FD6"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />


                </androidx.constraintlayout.widget.ConstraintLayout>


            </LinearLayout>

        </androidx.cardview.widget.CardView>


    </androidx.cardview.widget.CardView>


</androidx.constraintlayout.widget.ConstraintLayout>